--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.2",
+    "css-select": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
     "react-scripts": "^5.0.1",
+    "svgo": "^3.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -42,6 +45,15 @@
     ]
   },
   "devDependencies": {
-    "@iconify/react": "^4.1.1"
+    "@babel/plugin-transform-private-methods": "^7.23.3",
+    "@iconify/icons-eva": "^1.2.6",
+    "@iconify/react": "^4.1.1",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@svgr/plugin-svgo": "^8.1.0",
+    "@svgr/webpack": "^8.1.0",
+    "resolve-url-loader": "^5.0.0"
+  },
+  "overrides": {
+    "nth-check": "2.1.1"
   }
 }
