--- a/package.json
+++ b/package.json
@@ -5,15 +5,20 @@
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
     "@iconify-icons/eva": "^1.2.6",
+    "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.2",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
+    "react-router": "^6.20.1",
     "react-router-dom": "^6.20.0",
     "react-scripts": "^5.0.1",
     "vite": "^5.0.3",
@@ -22,6 +27,7 @@
   "scripts": {
     "start": "react-scripts start",
     "dev": "vite",
+    "APIserver": "node .\\server\\appRoutes.js",
     "build": "vite build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -47,6 +53,9 @@
   },
   "devDependencies": {
     "@iconify/react": "^4.1.1",
-    "@vitejs/plugin-react": "^4.2.0"
+    "@vitejs/plugin-react": "^4.2.0",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.3.5"
   }
 }
