--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -1,19 +1,25 @@
 {
-  "navigationFallback": {
-    "rewrite": "/index.html",
-    "exclude": ["/images/*.{png,jpg,gif}", "/css/*"]
-  },
   "routes": [
-    {
-      "route": "/",
-      "rewrite": "/index.html"
-    },
     {
       "route": "/*",
       "rewrite": "/index.html"
     }
   ],
+  "navigationFallback": {
+    "rewrite": "/index.html",
+    "exclude": ["/images/*.{png,jpg,gif}", "/css/*", "/js/*"]
+  },
+  "responseOverrides": {
+    "404": {
+      "rewrite": "/index.html",
+      "statusCode": 200
+    }
+  },
   "globalHeaders": {
-    "content-security-policy": "default-src 'self'"
+    "content-security-policy": "default-src 'self'; img-src 'self' https://*.example.com;"
+  },
+  "mimeTypes": {
+    ".json": "text/json",
+    ".svg": "image/svg+xml"
   }
 }
