--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -5,6 +5,10 @@
       "rewrite": "/index.html"
     }
   ],
+  "navigationFallback": {
+    "rewrite": "/index.html",
+    "exclude": ["/assets/*", "/static/*"]
+  },
   "responseOverrides": {
     "404": {
       "rewrite": "/index.html",
