--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -1,5 +1,17 @@
 {
     "navigationFallback": {
-      "rewrite": "/index.html"
+      "rewrite": "/index.html",
+      "exclude": [
+        "/assets/*",
+        "/*.css",
+        "/*.js",
+        "/*.png",
+        "/*.jpg",
+        "/*.jpeg",
+        "/*.gif",
+        "/*.svg",
+        "/*.webp",
+        "/*.ico"
+    ]
     }
 }
