--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -1,8 +1,8 @@
 {
     "routes": [
       {
-        "route": "/*",
-        "rewrite": "/index.html"
+        "route": "/*.html",
+        "rewrite": "/index.html",
       }
     ],
     "navigationFallback": {
