--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -2,7 +2,7 @@
     "routes": [
       {
         "route": "/*.html",
-        "rewrite": "/index.html",
+        "rewrite": "/index.html"
       }
     ],
     "navigationFallback": {
