--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -5,7 +5,7 @@
         "rewrite": "/index.html"
       },
       {
-        "route": "/*/*.html",
+        "route": "/home/*.html",
         "rewrite": "/index.html"
       }
     ],
