--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "start": "react-scripts start",
     "dev": "vite",
     "APIserver": "node .\\server\\appRoutes.js",
-    "build": "vite build",
+    "build": "",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "preview": "vite preview"
